--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@ div.table-title {
 }
 
 .table-title h3 {
-   color: #fafafa;
+   color: #100a4b;
    font-size: 30px;
    font-weight: 400;
    font-style:normal;
